<resources>
    <string name="app_name">Allergy Tracker</string>

    <string name="allergen_search_hint">Enter a search query</string>
    <string name="search_btn_hint">Search</string>
    <string name="search_error">Error fetching search results: %1$s</string>

    <string name="allergen_details_kosher">Kosher</string>
    <string name="allergen_details_vegetarian">Vegetarian</string>
    <string name="allergen_details_vegan">Vegan</string>
    <string name="allergen_details_pescatarian">Pescatarian</string>

    <string name="action_share">Share</string>
    <string name="share_text">%1$s: Contains %2$s</string>

    <string name="label_allergen_lookup">Allergen Lookup</string>
    <string name="label_calendar">Calendar</string>
    <string name="label_dose_schedule">Dose Schedules</string>
    <string name="label_add_dose_schedule">Add Dosage Schedule</string>
    <string name="label_dose_schedule_details">Dosage Schedule</string>
    <string name="label_edit_dose_schedule">Edit Dosage Schedule</string>
    <string name="label_delete_dose_schedule">Delete Dosage Schedule</string>
    <string name="label_cancel_edit_schedule">Discard changes</string>
    <string name="label_save_schedule">Save changes</string>
    <string name="dose_schedule_title_hint">Enter Dosage Name</string>
    <string name="hint_dose_amount">Enter a dose amount</string>
    <string name="hint_dose_freq">Enter dose frequency</string>
    <string name="label_add_dose_entry">Add new dose</string>
    <string name="label_delete_dose_schedule_entry">Delete dosage</string>
</resources>