<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lookup_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AllergenLookupFragment"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_search_query"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="22sp"
        android:hint="@string/allergen_search_hint" />

    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_search_query"
        android:layout_marginHorizontal="12dp"
        android:text="@string/search_btn_hint" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/btn_search"
        app:layout_constraintBottom_toTopOf="@id/img_edamam_attribution"
        android:layout_marginBottom="10dp">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loading_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:layout_marginTop="32dp"
            android:layout_gravity="top|center_horizontal"
            android:visibility="invisible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_allergen_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </FrameLayout>

    <ImageView
        android:id="@+id/img_edamam_attribution"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/allergen_details_frame"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:src="@drawable/edamam_badge_light" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/allergen_details_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/tv_food_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/barrier_diet"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_food_allergens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/barrier_diet"
            app:layout_constraintTop_toBottomOf="@id/tv_food_name"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_kosher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_vegetarian"
            android:layout_marginRight="6dp"
            android:text="@string/allergen_details_kosher" />
        <TextView
            android:id="@+id/tv_vegetarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/allergen_details_vegetarian" />
        <TextView
            android:id="@+id/tv_pescatarian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_kosher"
            app:layout_constraintRight_toRightOf="parent"
            android:text="@string/allergen_details_pescatarian" />
        <TextView
            android:id="@+id/tv_vegan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tv_kosher"
            app:layout_constraintRight_toLeftOf="@id/tv_pescatarian"
            android:layout_marginRight="6dp"
            android:text="@string/allergen_details_vegan" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_diet"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:barrierDirection="start"
            app:constraint_referenced_ids="tv_kosher,tv_pescatarian,tv_vegan,tv_vegetarian" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>